fixed bug not showing everything

--- a/themes/default/default.css
+++ b/themes/default/default.css
@@ -17,6 +17,7 @@ body{
     overflow: scroll !important;
     height: 100vh !important;
     position: relative !important;
+    padding-bottom: 150px;
 }
 
  
